--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "bluetooth-serial-port": "^2.2.2",
     "node-bluetooth": "^1.2.5",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
