--- a/package.json
+++ b/package.json
@@ -1,34 +1,21 @@
 {
-  "name": "Arduino_Bluetooth",
+  "name": "arduino_bluetooth",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
     "@babel/node": "^7.2.2",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "enzyme-to-json": "^3.3.5",
     "nodemon": "^1.18.10",
     "ss-clean-babel": "^1.0.14",
-    "ss-clean-jest-enzyme": "^1.0.4",
     "ss-clean-lint": "^1.0.6",
-    "ss-clean-slate": "^1.1.3",
-    "ss-clean-webpack": "^1.0.25"
+    "ss-clean-slate": "^1.1.3"
   },
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
     "bluetooth-serial-port": "^2.2.2",
-    "node-bluetooth": "^1.2.5",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "typeface-roboto": "^0.0.54"
+    "node-bluetooth": "^1.2.5"
   },
   "scripts": {
-    "start": "webpack-dev-server --config config/webpack.dev.babel.js",
-    "start:server": "nodemon --inspect  --exec babel-node src/server/index.js",
-    "build": "webpack --config config/webpack.production.babel.js",
-    "test": "jest --config ./jest.config.js",
+    "start": "nodemon --exec babel-node src/server/index.js",
     "lint": "eslint --ext .js src --config ./config/.eslintrc.js"
   }
 }
